fixed some layout issues

--- a/genres/style.css
+++ b/genres/style.css
@@ -16,7 +16,7 @@ body {
 }
 
 #genre-results-container {
-	margin: 0 5%;
+	margin: 55px 5% 0;
 	color: rgb(200, 200, 200);
 }
 
@@ -26,7 +26,7 @@ body {
 	margin-bottom: 15px;
 	display: flex;
 	align-items: flex-end;
-	background-color: rgb(22, 22, 22);
+	background-color: rgb(25, 25, 25);
 	border-radius: 5px;
 }
 
@@ -64,6 +64,11 @@ body {
 }
 
 @media screen and (max-width: 700px) {
+	#genre-results-container {
+		margin: 70px 0 0;
+		color: rgb(200, 200, 200);
+	}
+
 	.genre-result {
 		width: 100%;
 		border-radius: 0px;
@@ -89,9 +94,5 @@ body {
 
 	.result-details {
 		width: 60%;
-	}
-
-	#genre-results-container {
-		margin: 0;
 	}
 }
