--- a/search/search.css
+++ b/search/search.css
@@ -16,7 +16,7 @@ body {
 }
 
 #search-results-container {
-	margin: 0 5%;
+	margin: 55px 5% 0;
 	color: rgb(200, 200, 200);
 }
 
@@ -26,7 +26,7 @@ body {
 	margin-bottom: 15px;
 	display: flex;
 	align-items: flex-end;
-	background-color: rgb(22, 22, 22);
+	background-color: rgb(25, 25, 25);
 	border-radius: 5px;
 }
 
@@ -63,8 +63,12 @@ body {
 	}
 }
 
-
 @media screen and (max-width: 700px) {
+	#search-results-container {
+		margin: 70px 0 0;
+		color: rgb(200, 200, 200);
+	}
+
 	.search-result {
 		width: 100%;
 	}
@@ -90,9 +94,5 @@ body {
 
 	.result-details {
 		width: 60%;
-	}
-
-	#search-results-container {
-		margin: 0;
 	}
 }
